--- a/public/index.css
+++ b/public/index.css
@@ -2,7 +2,7 @@
   padding: 30px;
   font-family: "Open Sans", sans-serif;
   background-color: #fff;
-  background: linear-gradient(to right, orange, red);
+  background: linear-gradient(to right, orange, red, orange);
   
 }
 
